--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/soup_joumou_stovetop.html">Soup Joumou (Stovetop)</a></li>
         <li><a href="recipes/soup_joumou_instant_pot.html">Soup Joumou (Instant Pot)</a></li>
+        <li><a href="recipes/rice_and_beans.html">Haitian Rice and Beans</a></li>
     </ul>
 </body>
 </html>
